<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".ui.PublishActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/Publish_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/Publish_setTitle_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/Publish_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Publish_title"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="请填写标题"
                        android:textSize="24sp" />
                    <ImageView
                        android:id="@+id/Publish_icon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="10dp"
                        android:background="@android:drawable/ic_input_add" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#292828" />

            <LinearLayout
                android:id="@+id/Publish_setTag"
                android:layout_width="match_parent"
                android:layout_height="@dimen/long_button_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/Publish_tag"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/activity_publish_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:entries="@array/选择拼类型"
                    android:scrollbarSize="10dp"
                    android:spinnerMode="dialog" />


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/Publish_setContent"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginBottom="35dp"
                    android:text="@string/Publish_content"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/Publish_content"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:singleLine="false"
                    android:autofillHints="拼贴的详细内容"
                    android:hint="请填写拼贴的详细内容"
                    android:textSize="24sp"
                    android:inputType="textLongMessage" />



            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/Publish_setMemberLimit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/long_button_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/Publish_MemberLimit"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Publish_Member_Max"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Publish_Member_Max"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="24sp"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Publish_Member_Min"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Publish_Member_Min"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="24sp"
                    android:inputType="number"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/Publish_setGenderLimit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/long_button_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="61dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/Publish_GenderLimit"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <RadioGroup
                    android:id="@+id/Publish_GenderLimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/Publish_GenderLimit_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="无限制"
                        android:textSize="18sp"></RadioButton>

                    <RadioButton
                        android:id="@+id/Publish_GenderLimit_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="仅限男生"
                        android:textSize="18sp"></RadioButton>

                    <RadioButton
                        android:id="@+id/Publish_GenderLimit_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="仅限女生"
                        android:textSize="18sp"></RadioButton>
                </RadioGroup>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/Publish_setTime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/long_button_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/Publish_Time_End"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Publish_Time_End"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_blue"
                    android:text="请选择"
                    android:textSize="18sp"
                    android:textStyle="bold" />

<!--                <DatePicker-->
<!--                    android:id="@+id/Publish_Time_End"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content" />-->

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/Publish_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:text="发布" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>